--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "react-router-dom": "^6.23.0",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
-    "uuid": "^9.0.1"
+    "stream-chat": "^8.40.2",
+    "stream-chat-react": "^11.23.9",
+    "uuid": "^9.0.1",
+    "zego-zim-web": "^2.17.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
